# wiithon

./: .gitignore  LICENSE.md  README.md  pyproject.toml  test_arenaLo.md
docs/: README.md
examples/: create_from_dir.py  extract_rarc.py  extract_yaz0.py  list_files.py  partition_copy.py  patch_dol.py  patch_rarc_in_iso.py  print_infos.py
src/wiithon/: WiiIsoPatcher.py  WiiIsoReader.py  WiiPartitionInfo.py  __init__.py  cli.py
src/wiithon/builder/: CopyBuilder.py  DirectoryPartitionBuilder.py  WiiDiscBuilder.py  WiiPartitionInterface.py
src/wiithon/crypto/: CryptPartReader.py  CryptPartWriter.py
src/wiithon/file_helper/: bcsv.py  dol.py  rarc.py  transforms.py  yaz0.py
src/wiithon/file_system_table/: FST.py  FSTNode.py  FSTToBytes.py  Operations.py  RawNode.py
src/wiithon/helpers/: Constants.py  Enums.py  IOWindow.py  PowerPC.py  Utils.py
src/wiithon/structs/: ApploaderHeader.py  Certificate.py  DOLHeader.py  DiscHeader.py  TMD.py  TMDContent.py  Ticket.py  TicketTimeLimit.py  WiiPartitionEntry.py  (+1 more)
tests/: test_CryptPartWriter.py  test_WiiIsoPatcher.py  test_WiiIsoReader.py  test_WiiPartitionEntry.py  test_builder.py  test_ppc.py  test_rarc.py
tests/builder/: test_CopyBuilder.py  test_DirectoryPartitionBuilder.py
tests/file_helper/: test_bnr.py  test_dol.py  test_transform.py  test_yaz0.py
tests/file_system_table/: test_FST.py  test_FSTToBytes.py  test_Helpers_fst.py
tests/structs/: test_Certificate.py  test_DOLHeader.py  test_DiscHeader.py  test_IOWindow.py  test_TMD.py  test_TMDContent.py  test_Ticket.py  test_WiiPartitionHeader.py
