[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiithon"
version = "0.1.0"
description = "Wii ISO reading, patching and rebuilding library"
requires-python = ">=3.11"
dependencies = [
    "pycryptodome>=3.0",
]

[project.optional-dependencies]
cli = ["typer>=0.9", "rich>=13.0"]

[project.scripts]
wiithon = "wiithon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wiithon"]

[tool.hatch.version]
source = "vcs"